--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "^14.2.21",
+    "nodemailer": "^7.0.3",
     "pg": "^8.13.1",
     "qs": "^6.13.0",
     "react": "^18",
@@ -48,6 +49,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
